--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@react-pdf/renderer": "^3.1.9",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
