--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@react-pdf/renderer": "^3.1.9",
+    "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
-    "mongodb": "^5.6.0",
     "next": "13.3.4",
-    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
@@ -27,7 +26,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "2.8.8"
