--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf/renderer": "^3.1.9",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "aos": "^2.3.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "mongodb": "^5.6.0",
@@ -27,6 +28,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^20.3.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
