--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "mongodb": "^5.6.0",
