--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
@@ -30,9 +32,14 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/aos": "^3.0.4",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.3.3",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.2",
     "prettier": "2.8.8"
   },
